# simba_spectra_test

./: CMakeLists.txt  LICENSE  README.md  rebuild.cmd  rebuild.sh
srcjsoncreator/: CMakeLists.txt  filemapper.cpp  filemapper.h  flags.cpp  flags.h  formatting.cpp  formatting.h  formattingthread.cpp  formattingthread.h  json_ver1.h  jsoncreator.cpp  parsing_templates.h  protocol_srtuctures.h  protocol_structures.h  stdafx.h  tsafequeue.h
